--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
   "name": "offset",
   "version": "0.0.0",
   "devDependencies": {
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-imagemin": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-newer": "~0.6.0",
+    "grunt-replace": "~0.5.1",
+    "time-grunt": "~0.2.6",
+    "load-grunt-tasks": "~0.2.1",
+    "grunt-concurrent": "~0.4.2",
+    "jshint-stylish": "~0.1.4",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-modernizr": "~0.4.1",
+    "grunt-contrib-jshint": "~0.8.0"
   }
 }
