--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-coffee": "~0.8.0",
-    "grunt-contrib-cssmin": "~0.7.0"
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-sass": "~0.6.0",
+    "grunt-contrib-less": "~0.8.3"
   }
 }
