--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-coffee": "~0.8.0",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-sass": "~0.6.0",
-    "grunt-contrib-less": "~0.8.3"
+    "grunt-contrib-sass": "~0.6.0"
   }
 }
