--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,6 @@
   "license": "GPL 2.0",
   "homepage": "http://github.com/bytefair/offset",
   "dependencies": {
-    "modernizr": "~2.7.1",
-    "pure": "~0.3.0"
+    "modernizr": "~2.7.1"
   }
 }
