--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-sass": "~0.6.0"
+    "grunt-contrib-sass": "~0.6.0",
+    "grunt-wp-assets": "~0.2.1"
   }
 }
