--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   ],
   "license": "GPL 2.0",
   "homepage": "http://github.com/bytefair/offset",
-  "dependencies": {
-    "inuitcss": "~5.0.0"
+  "devDependencies": {
+    "bootstrap-sass-official": "~3.1.1"
   }
 }
