--- a/.jshintrc
+++ b/.jshintrc
@@ -1,3 +1,16 @@
 {
-	// JSHint options go here
+	"bitwise": true,
+	"browser": true,
+	"curly": true,
+	"eqeqeq": true,
+	"eqnull": true,
+	"esnext": true,
+	"immed": true,
+	"jquery": true,
+	"latedef": true,
+	"newcap": true,
+	"noarg": true,
+	"node": true,
+	"strict": false,
+	"trailing": true
 }
