--- a/.editorconfig
+++ b/.editorconfig
@@ -3,13 +3,14 @@ root = true
 
 [*]
 indent_style = tab
+indent_size = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[{*.js, *.txt}]
+indent_style = space
+
 [*.md]
 trim_trailing_whitespace = false
-
-[*.txt]
-indent_style = space
