--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "normalize.css": "~3.0"
+    "normalize.css": "~3.0",
+    "sanitize-css": "~1.1.0"
   }
 }
