deps: adds em media query and pxtorem postcss plugins by default and removes sassy-mixins

--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "browserify": "latest",
     "cssnano": "latest",
     "nodemon": "latest",
-    "normalize.css": "~4",
+    "normalize.css": "latest",
     "parallelshell": "latest",
     "postcss-cli": "latest",
     "postcss-cssnext": "latest",
+    "postcss-em-media-query": "latest",
     "postcss-import": "latest",
-    "postcss-sassy-mixins": "latest",
+    "postcss-pxtorem": "latest",
     "snazzy": "latest",
     "standard": "latest",
     "stylelint": "latest",
@@ -36,7 +37,7 @@
     "js:compile": "browserify scripts/entry.js --debug --verbose --transform [ babelify --presets [ es2015 ] ] --outfile scripts/bundle.js",
     "js:lint": "standard --verbose | snazzy",
     "js:min": "uglifyjs scripts/bundle.js --compress --mangle --output scripts/bundle.js",
-    "styles:compile": "postcss --use postcss-import --use postcss-cssnext --use postcss-sassy-mixins --config postcss.json --output styles/bundle.css styles/entry.css",
+    "styles:compile": "postcss --use postcss-import --use postcss-cssnext --use postcss-pxtorem --use postcss-em-media-query --config postcss.json --output styles/bundle.css styles/entry.css",
     "styles:lint": "stylelint styles/**/*.css",
     "styles:min": "postcss --use cssnano --replace styles/bundle.css",
     "serve": "browser-sync start --proxy 'hlkpress' --files '**/*'",
